--- a/.gitignore
+++ b/.gitignore
@@ -17,12 +17,14 @@
 vendor/
 
 # 2.python
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
 
 # 3.rust
+
 # will have compiled files and executables
 target/
 
@@ -36,6 +38,35 @@ Cargo.lock
 **/target/
 **/Cargo.lock
 
+# 4. elixir
 
-# 4.others
+# The directory Mix will write compiled artifacts to.
+/_build/
+
+# If you run "mix test --cover", coverage assets end up here.
+/cover/
+
+# The directory Mix downloads your dependencies sources to.
+/deps/
+
+# Where third-party dependencies like ExDoc output generated docs.
+/doc/
+
+# Ignore .fetch files in case you like to edit your project deps locally.
+/.fetch
+
+# If the VM crashes, it generates a dump, let's ignore it too.
+erl_crash.dump
+
+# Also ignore archive artifacts (built via "mix archive.build").
+*.ez
+
+# Ignore package tarball (built via "mix hex.build").
+in_elixir-*.tar
+
+# Temporary files, for example, from tests.
+/tmp/
+
+# 5.others
+
 .idea
